--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <link rel="stylesheet" href="./assets/css/highlight.min.css" />
     <link rel="stylesheet" href="./assets/css/atom-one-light.css" />
     <link rel="stylesheet" href="./assets/css/main.css" />
-    <link rel="stylesheet" href="../css/css-skeletons.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/css-skeletons@1.0.3/css/css-skeletons.min.css"
+    />
     <title>Single Div CSS Skeletons</title>
   </head>
   <body>
