feat: reduced the size by simplifying mask selectors

--- a/demo/index.html
+++ b/demo/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./assets/css/reset.css" />
     <link rel="stylesheet" href="./assets/css/highlight.min.css" />
-    <link rel="stylesheet" href="./assets/css/atom-one-light.css" />
+    <link rel="stylesheet" href="./assets/css/atom-one-dark.css" />
     <link rel="stylesheet" href="./assets/css/main.css" />
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/css-skeletons@1.0.3/css/css-skeletons.min.css"
+      href="https://cdn.jsdelivr.net/npm/css-skeletons@1.0.6/css/css-skeletons.min.css"
     />
     <title>Single Div CSS Skeletons</title>
   </head>
@@ -20,7 +20,7 @@
         <span>Fully Customizable</span> CSS library
       </h2>
 
-      <h5>No SVG, No Image. (11.2 Kb)</h5>
+      <h5>No SVG, No Image. (2.2 Kb Minified, Gzipped)</h5>
 
       <div class="github-btn">
         <a
@@ -38,12 +38,12 @@
 
       <h4>Use from CDN</h4>
       <pre class="code-intro"><code class="code js">&lt;!-- UNPKG -->
-&lt;link rel="stylesheet" href="https://unpkg.com/css-skeletons@1.0.3/css/css-skeletons.min.css" />
+&lt;link rel="stylesheet" href="https://unpkg.com/css-skeletons@1.0.6/css/css-skeletons.min.css" />
 
 or
 
 &lt;!-- JSDelivr -->
-&lt;link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/css-skeletons@1.0.3/css/css-skeletons.min.css" /></code></pre>
+&lt;link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/css-skeletons@1.0.6/css/css-skeletons.min.css" /></code></pre>
 
       <span class="or">Or</span>
       <h4>Install from NPM</h4>
