--- a/demo/index.html
+++ b/demo/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./assets/css/main.css" />
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/css-skeletons@1.0.6/css/css-skeletons.min.css"
+      href="https://cdn.jsdelivr.net/npm/css-skeletons@1.0.6/dist/css-skeletons.min.css"
     />
     <title>Single Div CSS Skeletons</title>
   </head>
