fix: use gulp-clean-css to minify

--- a/demo/index.html
+++ b/demo/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./assets/css/main.css" />
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/css-skeletons@1.0.6/dist/css-skeletons.min.css"
+      href="https://unpkg.com/css-skeletons@1.0.7/dist/css-skeletons.min.css"
     />
     <title>Single Div CSS Skeletons</title>
   </head>
@@ -37,12 +37,12 @@
 
       <h4>Use from CDN</h4>
       <pre class="code-intro"><code class="code js">&lt;!-- UNPKG -->
-&lt;link rel="stylesheet" href="https://unpkg.com/css-skeletons@1.0.6/dist/css-skeletons.min.css" />
+&lt;link rel="stylesheet" href="https://unpkg.com/css-skeletons@1.0.7/dist/css-skeletons.min.css" />
 
 or
 
 &lt;!-- JSDelivr -->
-&lt;link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/css-skeletons@1.0.6/dist/css-skeletons.min.css" /></code></pre>
+&lt;link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/css-skeletons@1.0.7/dist/css-skeletons.min.css" /></code></pre>
 
       <span class="or">Or</span>
       <h4>Install from NPM</h4>
